@@ -1,4 +1,4 @@
 module com.example.jdk {
   requires jdk.httpserver;
-  requires jdk.incubator.httpclient;
+  requires java.net.http;
 }
